adding button to another page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Course HTML 5 Basic </title>
   </head>
   <body>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-info" href="attribute.html">Page of Attribute</a>
+
+    </div>
     <center>
         <h1>
             This is my heading h1
