adding atttributes on pape

--- a/attribute.html
+++ b/attribute.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.icon">
     <title>Attribute on HTML</title>
     <style>
         #titleh1 {
@@ -10,23 +11,70 @@
             background: #6f42c1;
             color: white;
         }
-        .titleh2{
+        .titleh2 {
             color: #1e7e34;
             background: #1b1e21;
+        }
+        .titleh3 {
+            color: #4e555b;
+            background: white;
+        }
+        .titleh4 {
+            color: #533f03;
+            background: #dc3545;
+        }
+        .titleh5 {
+            color: white;
+            background: #1b1e21;
+        }
+        .titleh6 {
+            color: #e83e8c;
+            background: #fd7e14;
+        }
+        hr {
+            color: #0069d9;
+            background: #e83e8c;
         }
     </style>
 </head>
 <body>
+    <div class="text-center" style="margin-top: 10px; margin-bottom: 10px;">
+        <a href="index.html" class="btn btn-dark">Back</a>
+    </div>
     <center>
-        <h1 id="titleh1">
+        <h1 id="titleh1" tabindex="2">
             This is heading h1 used attributes
         </h1>
 
         <hr>
 
-        <h2 class="titleh2 title">
+        <h2 class="titleh2 title" tabindex="1">
             This is heading h2 used attributes
         </h2>
+
+        <hr>
+
+        <h3 class="titleh3 title" tabindex="3">
+            This is heading h3 used attributes
+        </h3>
+
+        <hr>
+
+        <h4 class="titleh4 title" tabindex="5">
+            This is heading h4 used attributes
+        </h4>
+
+        <hr>
+
+        <h5 class="titleh5 title" tabindex="4">
+            This is heading h5 used attributes
+        </h5>
+
+        <hr>
+
+        <h6 class="titleh6 title" tabindex="6">
+            This is heading h6 used attributes
+        </h6>
     </center>
 
 </body>
