--- a/attribute.html
+++ b/attribute.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.icon">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Attribute on HTML</title>
     <style>
         #titleh1 {
