--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.icon">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <title>Course HTML 5 Basic </title>
   </head>
   <body>
