adding button page of tags

--- a/attribute.html
+++ b/attribute.html
@@ -39,8 +39,12 @@
 </head>
 <body>
     <div class="text-center" style="margin-top: 10px; margin-bottom: 10px;">
-        <a href="index.html" class="btn btn-dark">Back</a>
+        <a href="index.html" class="btn btn-dark">Page Home</a>
     </div>
+    <div class="text-center" style="margin-top: 10px; margin-bottom: 10px;">
+        <a href="tags.html" class="btn btn-info">Page Tags</a>
+    </div>
+
     <center>
         <h1 id="titleh1" tabindex="2">
             This is heading h1 used attributes
@@ -54,7 +58,7 @@
 
         <hr>
 
-        <h3 class="titleh3 title" tabindex="3">
+        <h3 class="titleh3 title" title="This is my tooltip" data-testattr="attr" tabindex="3">
             This is heading h3 used attributes
         </h3>
 
