--- a/tags.html
+++ b/tags.html
@@ -5,11 +5,55 @@
     <title>Page of Tags</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            vertical-align: baseline;
+        }
+    </style>
 </head>
 <body>
+    <header style="width: 100%; display: block; position: relative">
+        <h1>Header</h1>
+    </header>
+    <nav style="width: 100%; display: block; position: relative">
+        <a>Home</a>
+        <a>Back</a>
+    </nav>
+
+    <aside id="sidebar" style="float: left; position: relative; display: inline; width: 30%">
+        <h2>Sidebar</h2>
+    </aside>
+
+    <section id="content" style="float: left; position: relative; display: inline; width: 70%">
+        <h2>Content</h2>
+    </section>
+
+    <article>
+        <h2>Article</h2>
+    </article>
+
+    <main>
+        <h2>Main</h2>
+    </main>
+
     <div class="text-center">
-        <h1>Page of Tags</h1>
+        <a href="attribute.html" class="btn btn-link">Back</a>
     </div>
+    <div class="text-center" style="border: 1px solid #0069d9">
+        <h1>Page of Tags with h1</h1>
+    </div>
+    <div class="text-center">
+        <h2>
+            This is my second div with h2
+        </h2>
+    </div>
+
+    <footer class="text-center" style="width: 100%; display: block; position: relative">
+        <h2>Footer</h2>
+    </footer>
 
 </body>
 </html>
