--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Page of Tags</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <style>
         * {
             margin: 0;
@@ -15,6 +14,13 @@
     </style>
 </head>
 <body>
+    <div class="text-center" style="margin-top: 10px; margin-bottom: 10px;">
+        <a href="index.html" class="btn btn-dark">Page Home</a>
+    </div>
+    <div class="text-center">
+        <a href="tags-multimedia.html" class="btn btn-dark">Tags of Multimedia</a>
+    </div>
+
     <header style="width: 100%; display: block; position: relative">
         <h1>Header</h1>
     </header>
