adding assets/ .svg

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <title>Course HTML 5 Basic </title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <title>Course HTML 5 Basic </title>
+        <link rel="shurcut icon" type="image/x-icon" href="assets/Biohazard_symbol.svg">
+
   </head>
   <body>
     <div class="text-center" style="margin-top: 10px;">
