--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Page of Tags</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shurcut icon" type="image/x-icon" href="assets/Biohazard_symbol.svg">
     <style>
         * {
             margin: 0;
