adding assets/ .svg

--- a/attribute.html
+++ b/attribute.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shurcut icon" type="image/x-icon" href="assets/Biohazard_symbol.svg">
     <title>Attribute on HTML</title>
     <style>
         #titleh1 {
