--- a/tags-multimedia.html
+++ b/tags-multimedia.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="shurcut icon" type="image/x-icon" href="assets/Biohazard_symbol.svg">
     <title></title>
 </head>
 <body>
@@ -30,14 +31,6 @@
 
     <section class="text-center" id="content" style="float: left; position: relative; display: inline; width: 70%">
         <h2>Content</h2>
-
-        <img src="img/html5.png" alt="Image HTML5">
-        <video width="350" height="250" controls>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"/>
-        </video>
-        <audio controls>
-            <source src="audio/horse.ogg" type="audio/ogg"/>
-        </audio>
     </section>
 
     <article>
@@ -58,6 +51,16 @@
         <h2>
             This is my second div with h2
         </h2>
+    </div>
+
+    <div class="text-center">
+        <img src="img/html5.png" alt="Image HTML5">
+        <video width="350" height="250" controls>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4"/>
+        </video>
+        <audio controls>
+            <source src="audio/horse.ogg" type="audio/ogg"/>
+        </audio>
     </div>
 
     <footer class="text-center" style="width: 100%; display: block; position: relative">
