adding button form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-info" href="attribute.html">Page of Attribute</a>
-
+    </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-success" href="form.html">Form on HTML5</a>
     </div>
     <center>
         <h1>
