--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-success" href="form.html">Form on HTML5</a>
     </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-dark" href="tags-organizations-lists.html">Tags Organizations and Lists</a>
+    </div>
+  
     <center>
         <h1>
             This is my heading h1
