--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-dark" href="tags-organizations-lists.html">Tags Organizations and Lists</a>
     </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-info" href="js_css.html">JS and CSS</a>
+    </div>
   
     <center>
         <h1>
