--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-info" href="js_css.html">JS and CSS</a>
     </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-block" href="table.html">Page Tables</a>
+    </div>
   
     <center>
         <h1>
