--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-block" href="table.html">Page Tables</a>
     </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-group-lg" href="iframe.html">Page Iframe</a>
+    </div>
   
     <center>
         <h1>
