--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="text-center" style="margin-top: 10px;">
         <a class="btn btn-group-lg" href="iframe.html">Page Iframe</a>
     </div>
+    <div class="text-center" style="margin-top: 10px;">
+        <a class="btn btn-light" href="meta-tags.html">Page Iframe</a>
+    </div>
   
     <center>
         <h1>
