adding page meta-tags

--- a/meta-tags.html
+++ b/meta-tags.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta name="keyworkd" content="HTML, SON">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <meta name="robots" content="index, nofollow">
     <meta name="description" content="">
     <meta charset="UTF-8">
     <title>Meta tags</title>
 </head>
 <body>
-
+    <header role="banner" style="width: 100%; display: block; position: relative">
+        <h1>Banner</h1>
+    </header>
+    <img role="" aria-labelledby="" src="img/html5.png" alt="Image HTML5">
 </body>
 </html>
